Refactor calculovator.java for better error handling and code readability